disable cat.img zoom until flickering bug is fixed (home medium/lge)

--- a/src/styles/home-large.css
+++ b/src/styles/home-large.css
@@ -319,7 +319,7 @@
 		border-radius: 3px;
 		/* [1.2] Hide the overflowing of child elements */
 		overflow: hidden;
-		/* border: 3px solid tomato; */
+		/* border: 5px solid tomato; */
     }
 
     .img-hover-zoom--portrait {
@@ -335,9 +335,9 @@
 
     /* [3] Finally, transforming the image when container gets hovered */
     /* THIS INCLUDES IMAGE + INFO DIV */
-    .portrait-img-container:hover img {
-      	transform: scale(1.025);
-    }
+    /* .portrait-img-container:hover img {
+      	transform: scale(1.02);
+    } */
 
     /* CATEGORY TEXT CONTAINERS */
 
@@ -404,9 +404,9 @@
     }
 
     /* THIS INCLUDES IMAGE + INFO DIV */
-    .landscape-img-container:hover img {
-      	transform: scale(1.025);
-    }
+    /* .landscape-img-container:hover img {
+      	transform: scale(1.02);
+    } */
 
     .img-hover-zoom--landscape {
 		width: 100%;
@@ -465,7 +465,7 @@
     }
 
     .category-img {
-      	filter: grayscale(0.2) blur(0.1px) opacity(1);
+      	filter: grayscale(0.2) blur(0.05px) opacity(1);
     }
 
     .category-img-container:hover .category-img {
